# AI_AGENT_BACKEND

./: Anchor.toml  package.json
app/solana-token-backend/: package.json
app/solana-token-backend/src/: index.ts  index2.ts
app/solana-token-backend/src/idl/: ai_agent.json  ai_agent.ts
programs/ai-agent/: Cargo.toml
programs/ai-agent/src/: errors.rs  lib.rs  state.rs
programs/ai-agent/src/instructions/: buy.rs  initialize.rs  remove_liquidity.rs  sell.rs
tests/: ai-agent.ts
